--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </div>
                     <div class="voice-card">
                         <blockquote>「目標設定から逆算して動く。本当の意味での"ガクチカ"はこうやって作るんだと知った。もう面接で深掘りされても怖くない。」</blockquote>
-                        <cite>ナツハさん (戦略的思考が得意)</cite>
+                        <cite>natsuhaさん (デザイン制作が得意)</cite>
                     </div>
                     <div class="voice-card">
                         <blockquote>「『課題の抱え込み』で大失敗した。でもそのおかげで『相談する勇気』を学べた。失敗を許容してくれる環境が、次の挑戦に繋がる。」</blockquote>
