--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
                     <div class="voice-card">
                         <blockquote>「僕の書いたコードが、1000人以上いるコミュニティのインフラになる。大学の研究室では味わえない、この手応えがたまらない。」</blockquote>
                         <cite>田中さん (技術探求が好き)</cite>
+                   </div>
+                    <div class="voice-card">
+                        <blockquote>「『世界牛乳の日』を盛り上げるため、AIで漫画を描いて発信した。自分の『面白い！』から始まった企画が、185件以上の応援を集めるムーブメントになった。アイデアをすぐに形にできる、この熱量がMetagriの魅力です。」</blockquote>
+                        <cite>ktsさん (企画・発信が好き)</cite>
                     </div>
                 </div>
             </div>
