--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="card-content">
                             <h3>コミュニティの学習インフラ「農業AIクイズBot」</h3>
                             <p>毎朝8時に「農業×Web3」クイズを自動配信。参加者は楽しく学びながら、コミュニティポイントを獲得できる。</p>
-                            <p><strong>あなたの貢献:</strong> Botのシステムを構築し、非エンジニアでも問題を追加できる仕組みを設計。君のコードが1000人超の「朝の新習慣」を創る。</p>
+                            <p><strong>インターンの貢献:</strong> Botのシステムを構築し、非エンジニアでも問題を追加できる仕組みを設計。君のコードが1000人超の「朝の新習慣」を創る。</p>
                         </div>
                     </div>
                     <div class="output-card">
@@ -161,7 +161,7 @@
                         <div class="card-content">
                             <h3>農業への第一歩「害虫撃退ミニゲーム」</h3>
                             <p>農業のリアルな課題「害虫駆除」を、誰もが楽しめるアクションゲームに昇華。ゲームで農業の「守る」側面を体感させる。</p>
-                            <p><strong>あなたの貢献:</strong> Unityでゲームを開発。君の創ったゲームが、Z世代が農業に興味を持つ「最初の一歩」になる。</p>
+                            <p><strong>インターンの貢献:</strong> Unityでゲームを開発。君の創ったゲームが、Z世代が農業に興味を持つ「最初の一歩」になる。</p>
                         </div>
                     </div>
                     <div class="output-card">
@@ -169,7 +169,7 @@
                         <div class="card-content">
                             <h3>"応援"が形になる「酪農×NFT」応援プロジェクト</h3>
                             <p>SNSと連動し、投稿数に応じて「称号NFT」や実在する牧場の「特製カヌレ」がもらえる酪農応援プロジェクト。</p>
-                            <p><strong>あなたの貢献:</strong> 企画立案から牧場との交渉、運営まで担当。君の企画が、185件以上の「応援の輪」を生み出し、人々の想いを形にする。</p>
+                            <p><strong>インターンの貢献:</strong> 企画立案から牧場との交渉、運営まで担当。君の企画が、200件以上の「応援の輪」を生み出し、人々の想いを形にする。</p>
                         </div>
                     </div>
                 </div>
