--- a/index.html
+++ b/index.html
@@ -213,6 +213,34 @@
             </div>
         </section>
 
+        <!-- ★ここから追加するセクション -->
+        <section class="voices-audio section">
+            <div class="container">
+                <h2 class="section-title">AIインタビュアー"Midori"が突撃！<br>先輩の"生"の声を聞く</h2>
+                <p class="section-description">テキストだけでは伝わらない、インターン活動のリアルな雰囲気や熱量を、AIインターン生Midoriによるインタビュー音声でお届けします。</p>
+                <div class="audio-grid">
+                    <!-- ktsさんの音声 -->
+                    <div class="audio-card">
+                        <h3>ktsさん（企画・発信が好き）</h3>
+                        <p>「面白い！」を形にする企画力と、人を巻き込む発信力の秘訣とは？</p>
+                        <iframe src="https://stand.fm/embed/episodes/68551b39316ab91252036634" class="standfm-embed-iframe" width="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <!-- さえりさんの音声 -->
+                    <div class="audio-card">
+                        <h3>さえりさん（ゲーム開発に挑戦）</h3>
+                        <p>技術の壁にぶつかった時、どう乗り越えた？失敗から学んだこと。</p>
+                        <iframe src="https://stand.fm/embed/episodes/684d182539540dbf972d01ab" class="standfm-embed-iframe" width="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <!-- 田中さんの音声 -->
+                    <div class="audio-card">
+                        <h3>田中さん（技術探求が好き）</h3>
+                        <p>コミュニティのインフラを創る、開発のやりがいと面白さ。</p>
+                        <iframe src="https://stand.fm/embed/episodes/68632398e929f66fa2508b0e" class="standfm-embed-iframe" width="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <!-- 解決策3: 本気の支援 -->
         <section class="solution-feedback section">
             <div class="container">
