--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         "value": {
           "@type": "QuantitativeValue",
           "minValue": 1100,
-          "maxValue": 2000,
+          "maxValue": 2500,
           "unitText": "HOUR"
         }
       }
@@ -191,7 +191,7 @@
                 <div class="voice-grid">
                     <div class="voice-card">
                         <blockquote>「『6割でGO』。このスピード感が僕を成長させた。完璧な計画より、まず動く。スタートアップのリアルがここにある。」</blockquote>
-                        <cite>くりちゃん (企画・推進が得意)</cite>
+                        <cite>くりちゃん (メタバース制作に挑戦)</cite>
                     </div>
                     <div class="voice-card">
                         <blockquote>「目標設定から逆算して動く。本当の意味での"ガクチカ"はこうやって作るんだと知った。もう面接で深掘りされても怖くない。」</blockquote>
@@ -277,11 +277,11 @@
                     </div>
                     <div class="req-item">
                         <h3>働き方</h3>
-                        <p>完全リモートワーク<br>週5時間〜（学業との両立OK）</p>
+                        <p>完全リモートワーク<br>週10時間〜（学業との両立OK）</p>
                     </div>
                     <div class="req-item">
                         <h3>報酬</h3>
-                        <p>月給制<br>（例: 時給1,100円〜2,000円）<br>※活動評価に基づき決定</p>
+                        <p>月給制<br>（例: 時給1,100円〜2,500円）<br>※活動評価に基づき決定</p>
                     </div>
                     <div class="req-item">
                         <h3>求める人物像</h3>
@@ -311,11 +311,11 @@
                     </div>
                     <div class="faq-item">
                         <h3>Q. リモートでのインターンとのことですが、コミュニケーションはどのように取りますか？</h3>
-                        <p>A. 主にDiscordを使用します。毎日の朝会や週次の定例会に加え、テキストでのコミュニケーションも活発です。先輩インターン生からのフィードバックも密に行われます。</p>
+                        <p>A. 主にDiscordを使用します。毎週日曜日の週次定例会に加え、テキストでのコミュニケーションも活発です。先輩インターン生からのフィードバックも密に行われます。</p>
                     </div>
                     <div class="faq-item">
                         <h3>Q. 報酬はどのように決まりますか？</h3>
-                        <p>A. 時給制をベースとした月給制です。貢献度に応じて評価を行い、ランクが上がると報酬もアップする仕組みになっています。あなたの挑戦と成果を正当に評価します。</p>
+                        <p>A. 貢献度に応じて評価を行い、評価次第で報酬がアップする仕組みになっています。あなたの挑戦と成果を正当に評価します。</p>
                     </div>
                 </div>
             </div>
