--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <!-- ★ここにGA4タグを追加する -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M38LFT8GCX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-M38LFT8GCX');
+    </script>
+    <!-- ★ここまで -->
     
     <!-- SEO & OGP: Final Version -->
     <title>農業×AI実践インターン募集 | Metagri研究所</title>
@@ -499,3 +511,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
